Changed image sources (Test)
compatibility test

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
 
       <div class="row fort-image mb-4">
-        <img src="/imgs/Unknown/skyline-of-fort-wayne-in-indiana.jpg" alt="fort-skyline">
+        <img src="imgs/Unknown/skyline-of-fort-wayne-in-indiana.jpg" alt="fort-skyline">
       </div>
     </div>
   </header>
@@ -78,7 +78,7 @@
     <div class="container mainSec">
       <div class="row">
         <div class="col-md infoSec">
-          <div class="row"><img src="/imgs/Unknown/education.jpg" alt=""></div>
+          <div class="row"><img src="imgs/Unknown/education.jpg" alt=""></div>
           <div class="row">
             <h1>Education</h1>
             <p>Here, at <I>Forge the Fort</I>, we believe education is a key fundamental into creating thriving
@@ -88,7 +88,7 @@
         </div>
 
         <div class="col-md infoSec">
-          <div class="row"><img src="/imgs/Unknown/community.jpg" alt=""></div>
+          <div class="row"><img src="imgs/Unknown/community.jpg" alt=""></div>
           <div class="row">
             <h1>Community</h1>
             <p>To make sure people can truly thrive, you have sure they have
@@ -100,7 +100,7 @@
         </div>
 
         <div class="col-md infoSec">
-          <div class="row"><img src="/imgs/Unknown/leisure2.jpg" alt=""></div>
+          <div class="row"><img src="imgs/Unknown/leisure2.jpg" alt=""></div>
           <div class="row">
             <h1>Leisure</h1>
             <p>At the end of the day, one of the best experiences in life is pleasure. We stand by pleasure and
