--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="/dist/css/styles.css">
+  <link rel="stylesheet" href="dist/css/styles.css">
 
 </head>
 
@@ -38,24 +38,24 @@
               <div id="navbarContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link unactive" href="/index.html">Home</a>
+                    <a class="nav-link unactive" href="index.html">Home</a>
                   </li>
                   <li class="nav-item active-link">
                     <a class="nav-link active-text" href="#">About</a>
                   </li>
                   <li class="nav-item">
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip">
-                      <a class="nav-link disabled" href="/Explore.html">Explore</a>
+                      <a class="nav-link disabled" href="Explore.html">Explore</a>
                     </span>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="/Resources.html">Resources</a>
+                    <a class="nav-link disabled" href="Resources.html">Resources</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link unactive" href="/Contact.html">Contact Us</a>
+                    <a class="nav-link unactive" href="Contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
-          <img src="/imgs/Unknown/portrait-edit.png" alt="portrait" id="portrait">
+          <img src="imgs/Unknown/portrait-edit.png" alt="portrait" id="portrait">
         </div>
         <div class="col-lg align-self-center">
           <div class="row">
