--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="/dist/css/styles.css">
+  <link rel="stylesheet" href="dist/css/styles.css">
 
 </head>
 
@@ -41,14 +41,14 @@
               <div id="navbarContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link unactive" href="/index.html">Home</a>
+                    <a class="nav-link unactive" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link unactive" href="/About.html">About</a>
+                    <a class="nav-link unactive" href="About.html">About</a>
                   </li>
                   <li class="nav-item">
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Coming soon...">
-                      <a class="nav-link disabled" href="/Explore.html">Explore</a>
+                      <a class="nav-link disabled" href="Explore.html">Explore</a>
                     </span>
                   </li>
                   <li class="nav-item">
@@ -57,10 +57,10 @@
                     </span>
                   </li>
                   <li class="nav-item" tabindex="0" data-toggle="tooltip" title="Coming soon...">
-                    <a class="nav-link disabled" href="/Resources.html">Resources</a>
+                    <a class="nav-link disabled" href="Resources.html">Resources</a>
                   </li>
                   <li class="nav-item active-link">
-                    <a class="nav-link active-text" href="/Contact.html">Contact Us</a>
+                    <a class="nav-link active-text" href="Contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
