--- a/Resources.html
+++ b/Resources.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resources & Information</title>
 
-  <link rel="stylesheet" href="/dist/css/styles.css">
+  <link rel="stylesheet" href="dist/css/styles.css">
 
 </head>
 
