Explore Page update
Made it an active link, new map, color coded on hover, etc

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <a class="nav-link unactive" href="About.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Coming soon...">
-                      <a class="nav-link disabled" href="Explore.html">Explore</a>
+                    <span class="d-inline-block" tabindex="0" >
+                      <a class="nav-link unactive" href="Explore.html">Explore</a>
                     </span>
                   </li>
                   <li class="nav-item">
