--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="dist/css/styles.css">
+  <link rel="stylesheet" href="./styles.css">
 
 </head>
 
@@ -44,8 +44,8 @@
                     <a class="nav-link active-text" href="#">About</a>
                   </li>
                   <li class="nav-item">
-                    <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip">
-                      <a class="nav-link disabled" href="Explore.html">Explore</a>
+                    <span class="d-inline-block" tabindex="0">
+                      <a class="nav-link unactive" href="Explore.html">Explore</a>
                     </span>
                   </li>
                   <li class="nav-item">
