--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="dist/css/styles.css">
+  <link rel="stylesheet" href="./styles.css">
 
 </head>
 
@@ -47,8 +47,8 @@
                     <a class="nav-link unactive" href="About.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Coming soon...">
-                      <a class="nav-link disabled" href="Explore.html">Explore</a>
+                    <span class="d-inline-block" tabindex="0" >
+                      <a class="nav-link unactive" href="Explore.html">Explore</a>
                     </span>
                   </li>
                   <li class="nav-item">
