Explore page Info boilerplate
bootstrap nav tabs & css changes

--- a/Explore.html
+++ b/Explore.html
@@ -16,6 +16,7 @@
 
 
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="/dist/css/responsive.css">
 </head>
 
 <body>
@@ -277,7 +278,7 @@
   <!-- <img src="./imgs/Royalty-free/BlankMap-USA-Midwest.svg" alt="Midwest Map" id="midwestmap"> -->
 
 
-  <!-- <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs justify-content-center" id="mapInfo">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -290,7 +291,7 @@
     <li class="nav-item">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
     </li>
-  </ul> -->
+  </ul>
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous">
