Explore page Tabs
added functionality

--- a/Explore.html
+++ b/Explore.html
@@ -277,29 +277,124 @@
 
   <!-- <img src="./imgs/Royalty-free/BlankMap-USA-Midwest.svg" alt="Midwest Map" id="midwestmap"> -->
 
+  <!-- #OH, #IN, #IL, #MI, #MN, #ND, #SD, #MO, #KS, #IA, #NE, #WI -->
 
-  <ul class="nav nav-tabs justify-content-center" id="mapInfo">
+
+
+
+<!-- ? MAP INFO -->
+  
+<nav id="mapInfo">
+   <div class="nav nav-tabs" id="nav-tab" role="tablist">
+     <button class="nav-link active" id="nav-ohio-tab" data-bs-toggle="tab" data-bs-target="#nav-ohio" type="button" role="tab" aria-controls="nav-ohio" aria-selected="true">Ohio</button>
+     <button class="nav-link" id="nav-indiana-tab" data-bs-toggle="tab" data-bs-target="#nav-indiana" type="button" role="tab" aria-controls="nav-indiana" aria-selected="false">Indiana</button>
+     <button class="nav-link" id="nav-illinois-tab" data-bs-toggle="tab" data-bs-target="#nav-illinois" type="button" role="tab" aria-controls="nav-illinois" aria-selected="false">Illinois</button>
+     <button class="nav-link" id="nav-michigan-tab" data-bs-toggle="tab" data-bs-target="#nav-michigan" type="button" role="tab" aria-controls="nav-michigan" aria-selected="false">Michigan</button>
+     <button class="nav-link" id="nav-minnesota-tab" data-bs-toggle="tab" data-bs-target="#nav-minnesota" type="button" role="tab" aria-controls="nav-minnesota" aria-selected="false">Minnesota</button>
+     <button class="nav-link" id="nav-north-dakota-tab" data-bs-toggle="tab" data-bs-target="#nav-north-dakota" type="button" role="tab" aria-controls="nav-north-dakota" aria-selected="false">North Dakota</button>
+     <button class="nav-link" id="nav-south-dakota-tab" data-bs-toggle="tab" data-bs-target="#nav-south-dakota" type="button" role="tab" aria-controls="nav-south-dakota" aria-selected="false">South Dakota</button>
+     <button class="nav-link" id="nav-missouri-tab" data-bs-toggle="tab" data-bs-target="#nav-missouri" type="button" role="tab" aria-controls="nav-missouri" aria-selected="false">Missouri</button>
+     <button class="nav-link" id="nav-kansas-tab" data-bs-toggle="tab" data-bs-target="#nav-kansas" type="button" role="tab" aria-controls="nav-kansas" aria-selected="false">Kansas</button>
+     <button class="nav-link" id="nav-iowa-tab" data-bs-toggle="tab" data-bs-target="#nav-iowa" type="button" role="tab" aria-controls="nav-iowa" aria-selected="false">Iowa</button>
+     <button class="nav-link" id="nav-nebraska-tab" data-bs-toggle="tab" data-bs-target="#nav-nebraska" type="button" role="tab" aria-controls="nav-nebraska" aria-selected="false">Nebraska</button>
+     <button class="nav-link" id="nav-wisconsin-tab" data-bs-toggle="tab" data-bs-target="#nav-wisconsin" type="button" role="tab" aria-controls="nav-wisconsin" aria-selected="false">Wisconsin</button>
+   </div>
+</nav>
+
+<div class="tab-content" id="nav-tabContent">
+   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+      Testing
+   </div>
+
+   <div class="tab-pane fade" id="nav-ohio" role="tabpanel" aria-labelledby="nav-ohio-tab">ohio
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-indiana" role="tabpanel" aria-labelledby="nav-indiana-tab">indiana
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-illinois" role="tabpanel" aria-labelledby="nav-illinois-tab">illinois
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-michigan" role="tabpanel" aria-labelledby="nav-michigan-tab">michigan
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-minnesota" role="tabpanel" aria-labelledby="nav-minnesota-tab">minnesota
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-north-dakota" role="tabpanel" aria-labelledby="nav-north-dakota-tab">north dakota
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-south-dakota" role="tabpanel" aria-labelledby="nav-south-dakota-tab">S. dakota
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-missouri" role="tabpanel" aria-labelledby="nav-missouri-tab">Missouri
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-kansas" role="tabpanel" aria-labelledby="nav-kansas-tab">Kansas
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-iowa" role="tabpanel" aria-labelledby="nav-iowa-tab">Iowa
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-nebraska" role="tabpanel" aria-labelledby="nav-nebraska-tab">Nebraska
+
+   </div>
+
+   <div class="tab-pane fade" id="nav-wisconsin" role="tabpanel" aria-labelledby="nav-wisconsin-tab">Wisconsin
+      
+   </div>
+</div>
+ 
+
+
+
+
+
+ 
+
+
+
+<!-- <div class="container">
+  <ul class="nav nav-tabs" id="mapInfo" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Active</a>
+      <a class="nav-link active" aria-current="page" href="#">Ohio</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="#">Indiana</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="#">Illinois</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Michigan</a>
     </li>
+    <li class="nav-item"><a href="#" class="nav-link">Minnesota</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">North Dakota</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">South Dakota</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">Missouri</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">Kansas</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">Iowa</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">Nebraska</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">Wiscousin</a></li>
   </ul>
+</div> -->
 
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-    integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous">
-  </script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
-  </script>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
