--- a/Explore.html
+++ b/Explore.html
@@ -283,14 +283,14 @@
   <!-- #OH, #IN, #IL, #MI, #MN, #ND, #SD, #MO, #KS, #IA, #NE, #WI -->
 
 
-
+<button onclick="clearMap()" class="btn btn-danger" style="margin-top: 100px;">Clear Map</button>
 
 <!-- ? MAP INFO -->
   
 <nav id="mapInfo">
    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-     <button class="nav-link active" id="nav-ohio-tab" data-bs-toggle="tab" data-bs-target="#nav-ohio" type="button" role="tab" aria-controls="nav-ohio" aria-selected="true">Ohio</button>
-     <button class="nav-link" id="nav-indiana-tab" data-bs-toggle="tab" data-bs-target="#nav-indiana" type="button" role="tab" aria-controls="nav-indiana" aria-selected="false">Indiana</button>
+     <button class="nav-link active" id="nav-ohio-tab" data-bs-toggle="tab" data-bs-target="#nav-ohio" type="button" role="tab" aria-controls="nav-ohio" aria-selected="true" onclick="ohioClick()">Ohio</button>
+     <button class="nav-link" id="nav-indiana-tab" data-bs-toggle="tab" data-bs-target="#nav-indiana" type="button" role="tab" aria-controls="nav-indiana" aria-selected="false" onclick="indianaClick()">Indiana</button>
      <button class="nav-link" id="nav-illinois-tab" data-bs-toggle="tab" data-bs-target="#nav-illinois" type="button" role="tab" aria-controls="nav-illinois" aria-selected="false">Illinois</button>
      <button class="nav-link" id="nav-michigan-tab" data-bs-toggle="tab" data-bs-target="#nav-michigan" type="button" role="tab" aria-controls="nav-michigan" aria-selected="false">Michigan</button>
      <button class="nav-link" id="nav-minnesota-tab" data-bs-toggle="tab" data-bs-target="#nav-minnesota" type="button" role="tab" aria-controls="nav-minnesota" aria-selected="false">Minnesota</button>
