clearApp function update
restoring the hover affect it had before

--- a/Explore.html
+++ b/Explore.html
@@ -283,7 +283,7 @@
   <!-- #OH, #IN, #IL, #MI, #MN, #ND, #SD, #MO, #KS, #IA, #NE, #WI -->
 
 
-<button onclick="clearMap()" class="btn btn-danger" style="margin-top: 100px;">Clear Map</button>
+<!-- <button onclick="clearMap()" class="btn btn-danger" style="margin-top: 100px;">Clear Map</button> -->
 
 <!-- ? MAP INFO -->
   
@@ -291,16 +291,16 @@
    <div class="nav nav-tabs" id="nav-tab" role="tablist">
      <button class="nav-link active" id="nav-ohio-tab" data-bs-toggle="tab" data-bs-target="#nav-ohio" type="button" role="tab" aria-controls="nav-ohio" aria-selected="true" onclick="ohioClick()">Ohio</button>
      <button class="nav-link" id="nav-indiana-tab" data-bs-toggle="tab" data-bs-target="#nav-indiana" type="button" role="tab" aria-controls="nav-indiana" aria-selected="false" onclick="indianaClick()">Indiana</button>
-     <button class="nav-link" id="nav-illinois-tab" data-bs-toggle="tab" data-bs-target="#nav-illinois" type="button" role="tab" aria-controls="nav-illinois" aria-selected="false">Illinois</button>
-     <button class="nav-link" id="nav-michigan-tab" data-bs-toggle="tab" data-bs-target="#nav-michigan" type="button" role="tab" aria-controls="nav-michigan" aria-selected="false">Michigan</button>
-     <button class="nav-link" id="nav-minnesota-tab" data-bs-toggle="tab" data-bs-target="#nav-minnesota" type="button" role="tab" aria-controls="nav-minnesota" aria-selected="false">Minnesota</button>
-     <button class="nav-link" id="nav-north-dakota-tab" data-bs-toggle="tab" data-bs-target="#nav-north-dakota" type="button" role="tab" aria-controls="nav-north-dakota" aria-selected="false">North Dakota</button>
-     <button class="nav-link" id="nav-south-dakota-tab" data-bs-toggle="tab" data-bs-target="#nav-south-dakota" type="button" role="tab" aria-controls="nav-south-dakota" aria-selected="false">South Dakota</button>
-     <button class="nav-link" id="nav-missouri-tab" data-bs-toggle="tab" data-bs-target="#nav-missouri" type="button" role="tab" aria-controls="nav-missouri" aria-selected="false">Missouri</button>
-     <button class="nav-link" id="nav-kansas-tab" data-bs-toggle="tab" data-bs-target="#nav-kansas" type="button" role="tab" aria-controls="nav-kansas" aria-selected="false">Kansas</button>
-     <button class="nav-link" id="nav-iowa-tab" data-bs-toggle="tab" data-bs-target="#nav-iowa" type="button" role="tab" aria-controls="nav-iowa" aria-selected="false">Iowa</button>
-     <button class="nav-link" id="nav-nebraska-tab" data-bs-toggle="tab" data-bs-target="#nav-nebraska" type="button" role="tab" aria-controls="nav-nebraska" aria-selected="false">Nebraska</button>
-     <button class="nav-link" id="nav-wisconsin-tab" data-bs-toggle="tab" data-bs-target="#nav-wisconsin" type="button" role="tab" aria-controls="nav-wisconsin" aria-selected="false">Wisconsin</button>
+     <button class="nav-link" id="nav-illinois-tab" data-bs-toggle="tab" data-bs-target="#nav-illinois" type="button" role="tab" aria-controls="nav-illinois" aria-selected="false" onclick="ilClick()">Illinois</button>
+     <button class="nav-link" id="nav-michigan-tab" data-bs-toggle="tab" data-bs-target="#nav-michigan" type="button" role="tab" aria-controls="nav-michigan" aria-selected="false" onclick="miClick()">Michigan</button>
+     <button class="nav-link" id="nav-minnesota-tab" data-bs-toggle="tab" data-bs-target="#nav-minnesota" type="button" role="tab" aria-controls="nav-minnesota" aria-selected="false" onclick="mnClick()">Minnesota</button>
+     <button class="nav-link" id="nav-north-dakota-tab" data-bs-toggle="tab" data-bs-target="#nav-north-dakota" type="button" role="tab" aria-controls="nav-north-dakota" aria-selected="false" onclick="ndClick()">North Dakota</button>
+     <button class="nav-link" id="nav-south-dakota-tab" data-bs-toggle="tab" data-bs-target="#nav-south-dakota" type="button" role="tab" aria-controls="nav-south-dakota" aria-selected="false" onclick="sdClick()">South Dakota</button>
+     <button class="nav-link" id="nav-missouri-tab" data-bs-toggle="tab" data-bs-target="#nav-missouri" type="button" role="tab" aria-controls="nav-missouri" aria-selected="false" onclick="moClick()">Missouri</button>
+     <button class="nav-link" id="nav-kansas-tab" data-bs-toggle="tab" data-bs-target="#nav-kansas" type="button" role="tab" aria-controls="nav-kansas" aria-selected="false" onclick="ksClick()">Kansas</button>
+     <button class="nav-link" id="nav-iowa-tab" data-bs-toggle="tab" data-bs-target="#nav-iowa" type="button" role="tab" aria-controls="nav-iowa" aria-selected="false" onclick="iaClick()">Iowa</button>
+     <button class="nav-link" id="nav-nebraska-tab" data-bs-toggle="tab" data-bs-target="#nav-nebraska" type="button" role="tab" aria-controls="nav-nebraska" aria-selected="false" onclick="neClick()">Nebraska</button>
+     <button class="nav-link" id="nav-wisconsin-tab" data-bs-toggle="tab" data-bs-target="#nav-wisconsin" type="button" role="tab" aria-controls="nav-wisconsin" aria-selected="false" onclick="wiClick()">Wisconsin</button>
    </div>
 </nav>
 
