--- a/Explore.html
+++ b/Explore.html
@@ -287,16 +287,17 @@
 
 <!-- ? Carousel -->
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+   <h3>Upcoming Cities</h3>
    <div class="carousel-inner">
      <div class="carousel-item active">
-       <img src="./imgs/Unknown/community.jpg" class="d-block w-100" alt="...">
-       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, pariatur? Eligendi, facilis, totam deleniti sed incidunt fugiat eaque delectus asperiores odit ab quisquam! Perferendis fuga laudantium quis odio a repellat!</p>
+       <img src="./imgs/Unknown/community.jpg" class="d-block w-50" alt="...">
+       <p class="w-50">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, pariatur? Eligendi, facilis, totam deleniti sed incidunt fugiat eaque delectus asperiores odit ab quisquam! Perferendis fuga laudantium quis odio a repellat!</p>
      </div>
      <div class="carousel-item">
-       <img src="./imgs/Unknown/education.jpg" class="d-block w-100" alt="...">
+       <img src="./imgs/Unknown/education.jpg" class="d-block w-50" alt="...">
      </div>
      <div class="carousel-item">
-       <img src="./imgs/Unknown/leisure.jpg" class="d-block w-100" alt="...">
+       <img src="./imgs/Unknown/leisure.jpg" class="d-block w-50" alt="...">
      </div>
    </div>
  </div>
