--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button> -->
 
-              <div id="navbarContent">
+              <!-- <div id="navbarContent">
                 <ul class="navbar-nav">
                   <li class="nav-item active-link">
                     <a class="nav-link active-text" href="#">Home</a>
@@ -62,7 +62,40 @@
                     <a class="nav-link unactive" href="Contact.html">Contact Us</a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
+
+
+
+              <nav class="navbar navbar-expand-lg">
+                <!-- <a class="navbar-brand" href="#">Menu</a> -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active-link">
+                      <a class="nav-link active-text" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link unactive" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link unactive" href="Explore.html">Explore</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item" tabindex="0" data-toggle="tooltip" title="Coming soon...">
+                      <a class="nav-link disabled" href="Resources.html">Resources</a>
+                    </li>
+                    <li class="nav-item" tabindex="0" data-toggle="tooltip" title="Coming soon...">
+                      <a class="nav-link unactive" href="Contact.html">Contact Us</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+
+
             </div>
           </nav>
         </div>
@@ -115,10 +148,12 @@
 
   <footer></footer>
 
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <!-- <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
 
