--- a/Explore.html
+++ b/Explore.html
@@ -20,6 +20,9 @@
 
 <script src="./scripts/explore.js"></script>
 
+<link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body>
