--- a/About.html
+++ b/About.html
@@ -14,6 +14,9 @@
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles.css">
 
+  <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
+  
+
 </head>
 
 <body class="container-fluid">
