--- a/Blog.html
+++ b/Blog.html
@@ -9,6 +9,9 @@
 
   <link rel="stylesheet" href="./styles.css">
 
+  <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body>
