--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="dist/css/styles.css">
+
+  <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
 </head>
 
 
